--- a/main.tex
+++ b/main.tex
@@ -3224,12 +3224,12 @@ a_{n-1}& =q_{n-1}a_n+0
 \end{align*}
 Es gilt:
 \[
-d := a_n = \ggT(a, b).
+\ggT(a, b) = a_n.
 \]
 
-Durch Rückwärtseinsetzen lässt sich $d$ als Linearkombination von $a$ und $b$ darstellen:
+Durch Rückwärtseinsetzen lässt sich $\ggT(a,b)$ als Linearkombination von $a$ und $b$ darstellen:
 \[
-d = a_n = a_{n-2} - q_{n-2} a_{n-1} = \dots = u a + v b \quad \text{mit } u, v \in R.
+\ggT(a,b) = a_n = a_{n-2} - q_{n-2} a_{n-1} = \dots = u a + v b \quad \text{mit } u, v \in R.
 \]
 \end{satz}
 
